feat: user, location and owner
